--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body{
 
 .headr .gas-price p
 {
-    padding: 5px;
+    padding: 0 8px;
 }
 .box
 {
@@ -59,7 +59,27 @@ body{
     border-radius: 6px;
     padding: 10px;
     width: 50%;
+    height: 100%;
     margin: 10px;
     display: flex;
     flex-direction: column;
+    padding: 10px 30px;
+}
+.box .box1 h3
+{
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
+.box1 .item
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    color: #838181;
+}
+.box1 .item span
+{
+    color: #ffffff;
 }
