add onclick event for switch between gas fees

--- a/style.css
+++ b/style.css
@@ -83,3 +83,16 @@ body{
 {
     color: #ffffff;
 }
+
+#fast
+{
+    display: none;
+}
+#fast2
+{
+    display: none;
+}
+#fast3
+{
+    display: none;
+}
